assets/css/style.css
@import url('https://fonts.googleapis.com/css2?family=PT+Serif&family=Pacifico&display=swap');

:root {
    --snow:#fffafa;
    --antarcticblue: #2b3f5c;
}

* {
    padding:0;
    border:none;
    margin:0;
}

/********************styles for body======================*/

#main-container-grid {
    background-image: url("../images/standy-up-ducks.webp");
    background-size:cover;
    display:grid;
    grid-template-columns: repeat(12, 1fr);
    grid-template-rows: repeat(13, auto);
    grid-template-areas: 
    "header header header header header header header header header header header header "
    "nav nav nav nav nav nav nav nav nav nav nav nav "
    "main-texts main-texts main-texts main-texts main-texts main-texts main-texts main-texts main-texts main-texts main-texts main-texts"
    "main-texts main-texts main-texts main-texts main-texts main-texts main-texts main-texts main-texts main-texts main-texts main-texts"
    "main-texts main-texts main-texts main-texts main-texts main-texts main-texts main-texts main-texts main-texts main-texts main-texts"
    "main-texts main-texts main-texts main-texts main-texts main-texts main-texts main-texts main-texts main-texts main-texts main-texts"
    "main-texts main-texts main-texts main-texts main-texts main-texts main-texts main-texts main-texts main-texts main-texts main-texts"
    "main-texts main-texts main-texts main-texts main-texts main-texts main-texts main-texts main-texts main-texts main-texts main-texts"
    "main-texts main-texts main-texts main-texts main-texts main-texts main-texts main-texts main-texts main-texts main-texts main-texts"
    "main-texts main-texts main-texts main-texts main-texts main-texts main-texts main-texts main-texts main-texts main-texts main-texts"
    "main-texts main-texts main-texts main-texts main-texts main-texts main-texts main-texts main-texts main-texts main-texts main-texts"
    "main-texts main-texts main-texts main-texts main-texts main-texts main-texts main-texts main-texts main-texts main-texts main-texts"
    "foot foot foot foot foot foot foot foot foot foot foot foot";
     font-size:.9rem;
}

#bluffers-container-grid {
     background-image: url("../images/standy-up-ducks.webp");
     background-size:cover;
     display:grid;
     grid-template-columns: repeat(12, 1fr);
     grid-template-rows: repeat(12, auto);
     grid-template-areas: 
    "header header header header header header header header header header header header "
    "nav nav nav nav nav nav nav nav nav nav nav nav "
    "tenf tenf tenf tenf tenf tenf tenf tenf tenf tenf tenf tenf"
    "tenf tenf tenf tenf tenf tenf tenf tenf tenf tenf tenf tenf"
    "tenf tenf tenf tenf tenf tenf tenf tenf tenf tenf tenf tenf"
    "tenf tenf tenf tenf tenf tenf tenf tenf tenf tenf tenf tenf"
    "tenf tenf tenf tenf tenf tenf tenf tenf tenf tenf tenf tenf"
    "tenf tenf tenf tenf tenf tenf tenf tenf tenf tenf tenf tenf"
    "tenf tenf tenf tenf tenf tenf tenf tenf tenf tenf tenf tenf"
    "tenf tenf tenf tenf tenf tenf tenf tenf tenf tenf tenf tenf"
    "foot foot foot foot foot foot foot foot foot foot foot foot"
    ". . . . . . . . . . . . ";
    font-size:0.8rem;
       
}


#links-container-grid {
    background-image: url("../images/standy-up-ducks.webp");
    background-size:cover;
    display:grid;
    grid-template-columns: repeat(12, 1fr);
    grid-template-rows: repeat(12, auto);
    grid-template-areas: 
    "header header header header header header header header header header header header "
    "nav nav nav nav nav nav nav nav nav nav nav nav "
    "links links links links links links links links links links links links"
    "links links links links links links links links links links links links"
    "links links links links links links links links links links links links"
    "links links links links links links links links links links links links"
    "links links links links links links links links links links links links"
    "links links links links links links links links links links links links"
    "links links links links links links links links links links links links"
    "links links links links links links links links links links links links"
    "links links links links links links links links links links links links"
    "foot foot foot foot foot foot foot foot foot foot foot foot";
    font-size:0.8rem;
           
}

/*=========================header styles==================================*/
header {
    display:grid;
    grid-template-columns: 1fr 1fr 1fr;
    grid-template-rows:auto;
    grid-template-areas:"logo circle ham";
    background-color:var(--snow);
    grid-area: header;
    align-items: center;
    position: fixed;
    top:0;
    left:0;
    width:100vw;
    z-index:1;
}

#header-logo {
    background-color:var(--snow);
    max-height:150px;
    width:100%;
    display:inline-block;
    grid-area:logo;
}

#header-logo h1 {
    float:left;
    padding-left:25px;
    color:var(--antarcticblue);
    font-family:'PT Serif', serif;
    
}

#header-logo p {
    font-family:'Pacifico', cursive;
    clear:both;
    padding-left:25px;
    color:var(--antarcticblue);
    float:left;
   white-space: pre;
}

.active {
    border-left: 1px solid var(--antarcticblue);
    border-radius:15%;   
}

#center-about {
    width: 100%;
    height:100%;
    margin:0 auto;
    background-color:var(--snow);
    grid-area: circle;
    
}

.circle-container {
    width: 100px;
    height: 100px;
    border-radius: 50%;
    margin-left: 20%;
    padding-top:10px;  
}

.circle-cover-bg {
    background:url(../images/Crean-pipe.jpg) no-repeat center center;
    height:100%;
    border-radius:50%
}

/* hamburger button based on tutorial by tyler potts*/
.hamburger {
	position: absolute;
    top:0;
    right:0;
	display: block;
	width: 35px;
	cursor: pointer;
	grid-area:ham;
	appearance: none;
	background: none;
	outline: none;
	border: none;
}
/* ... */

